Refactored PrimitiveType and added dynamic tests.